add services, validation, cloud configuration
