# src/main/java/com/demo/catalogue/model/student/service/StudentService.java
@@ -1,5 +1,6 @@
 package com.demo.catalogue.model.student.service;
 
+import com.demo.catalogue.model.grade.entity.Grade;
 import com.demo.catalogue.model.student.entity.Student;
 import com.demo.catalogue.model.student.repository.StudentRepository;
 import org.springframework.stereotype.Service;
@@ -24,7 +25,8 @@ public class StudentService {
     }
 
     public Student getById(Long id) {
-        return studentRepository.findById(id).orElseThrow();
+        return studentRepository.findById(id)
+                .orElseThrow(() -> new StudentNotFoundException("Student not found with id " + id));
     }
 
     public Student update(Long id, Student s) {
@@ -36,9 +38,15 @@ public class StudentService {
     }
 
     public void delete(Long id) {
-        if (!studentRepository.existsById(id)) {
-            throw new RuntimeException("Student not found with id " + id);
-        }
-        studentRepository.deleteById(id);
+        Student existing = getById(id); // avoids duplicate DB calls
+        studentRepository.delete(existing);
     }
+
+    public List<Grade> getAllGradesByStudentCode(String studentCode){
+            List<Grade> grades = studentRepository.findAllGradesByStudentCode(studentCode);
+            if (grades.isEmpty()) {
+                throw new StudentNotFoundException("No grades found for studentCode " + studentCode);
+            }
+            return grades;
+        }
 }
